--- a/calculator.html
+++ b/calculator.html
@@ -10,90 +10,8 @@
     <script src="react-dom.js"></script><!--引入ReactDOM-->
     <script src="browser.min.js"></script><!--找到type="text/babel"标签并转化为js 快速创建运行环境-->
     <script src="prop-types.js"></script><!--需要使用PropTypes时引用-->
+    <link rel="stylesheet" href="index.css">
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        box-sizing: border-box;
-        font-family: "Helvetica Neue", Roboto, "Segoe UI", sans-serif;
-    }
-
-    html {
-        height: 100%;
-    }
-
-    body {
-        height: 100%;
-    }
-
-    #app {
-        height: 100%;
-        background: #0D1017;
-    }
-
-    .page {
-        height: 100%;
-    }
-
-    .display {
-        height: 30%;
-        position: relative;
-    }
-
-    .display .header {
-        width: 100%;
-        height: 25%;
-        font-size: 1.2rem;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .display .cal {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        padding: 0 7% 0 0;
-        text-align: right;
-        font-size: 4rem;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-    }
-
-    .keyboard {
-        height: 70%;
-        background: #0E151B;
-    }
-
-    .keyboard ul {
-        height: 100%;
-    }
-
-    .keyboard ul li {
-        color: #fff;
-        width: 25%;
-        height: 20%;
-        float: left;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.5rem;
-    }
-
-    .keyboard ul li:nth-child(4n) {
-        background: #171A21;
-        font-size: 2rem;
-    }
-
-    .keyboard ul li:nth-last-child(1) {
-        background: #EE2629;
-    }
-</style>
 <script type="text/babel">
     class Display extends React.Component {
         render() {
